--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,3 +18,4 @@
 // ------------------------------------ // ------------------------------------------
 // --------------------------------- C O M P O N E N T S ----------------------------
 // ------------------------------------ // ------------------------------------------
+@import './components/buttons.scss';
