--- a/styles/utils/__variables.scss
+++ b/styles/utils/__variables.scss
@@ -7,6 +7,8 @@ $font-main-outline:     'Steelfish Outline';
 $font-main-bold:        'Steelfish Bold';
 $font-main-italic:      'Steelfish Italic';
 $font-main-regular:     'Steelfish';
+$font-special-bold:     'BigJohnPro Bold';
+$font-special-odachi:   'Odachi';
 
 /* ------------------------
             Colors
