--- a/styles/base/layout.scss
+++ b/styles/base/layout.scss
@@ -1,4 +1,91 @@
 .webgl {
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
+}
+//Debug panel
+.dg.ac {
+    z-index: 99 !important;
+
+    .dg.main.a {
+        position: relative;
+        z-index: 99;
+    }
+}
+
+h1 {
+    position: fixed;
+    z-index: 1;
+    top: 15vh;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    font-family: $font-main-bold;
+    font-size: 20vh;
+    letter-spacing: 1.3rem;
+    text-align: center;
+    color: rgb(187, 205, 205);
+    opacity: .3;
+}
+
+.page {
+	position: relative;
+	z-index: 3;
+}
+
+.section {
+    width: 100vw;
+    height: 100vh;
+    outline: 1px solid red;
+}
+
+// Section 1
+.section:nth-child(1) {
+    padding-top: 15vh;
+}
+
+// Section 2
+.infos {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
+    &__wrapper {
+        width: 50%;      
+    }
+
+    h2 {
+        font-family: $font-main-bold;
+        font-size: 5vh;
+        margin-bottom: 20px;
+    }
+
+    p {
+        width: 50%;
+        line-height: 1.3;
+        margin-bottom: 40px;
+    }
+}
+
+// Section 3
+.section.nutrition {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30vw;
+
+    .left-side,
+    .right-side {
+        height: 20vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+// Section 5
+.section.monster_original {
 }
