--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -1,5 +1,6 @@
 .redirect-link {
-    font-size: .8rem;
+    font-size: 1rem;
     font-family: $font-main-bold;
     letter-spacing: .1rem;
+    color: $monster-blue;
 }
