--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 // ------------------------------------ // ------------------------------------------
 
 @import'./utils/__variables';
+@import'./utils/__classes';
 
 
 // ------------------------------------ // ------------------------------------------
