--- a/styles/utils/__variables.scss
+++ b/styles/utils/__variables.scss
@@ -19,6 +19,15 @@ $grey-1:#1c1c1c;
 $grey-2: #222222;
 $grey-3: #3e3e40;
 $grey-4: #7F8487;
+$grey-5: #a2afbc;
+$grey-6: #bbcdcd;
  
 $white-1: #ffffff;
 $white-2: #d3d3d3;
+
+$monster-blue: #00A7C0;
+$monster-green-medium: #C2D72D;
+$monster-green-dark: #31AA49;
+$monster-red: #D5262A;
+$monster-yellow: #FAEF55;
+$monster-grey: #9daab9;
