--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 // ------------------------------------ // ------------------------------------------
 
 @import'./utils/__variables';
+@import'./utils/__mixins';
 @import'./utils/__classes';
 
 
@@ -20,3 +21,4 @@
 // --------------------------------- C O M P O N E N T S ----------------------------
 // ------------------------------------ // ------------------------------------------
 @import './components/buttons.scss';
+@import './components/navDots.scss'
