Add custom scroll distance bar

--- a/styles/base/layout.scss
+++ b/styles/base/layout.scss
@@ -1,5 +1,16 @@
 body {
     background-color: #e0e5eb;
+    //IE / Edge
+    -ms-overflow-style: none;
+}
+
+//Firefox
+html {
+    scrollbar-width: none;
+}
+// Chrome / Safari
+body::-webkit-scrollbar{
+    display: none; 
 }
 
 .webgl {
