--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,4 +21,5 @@
 // --------------------------------- C O M P O N E N T S ----------------------------
 // ------------------------------------ // ------------------------------------------
 @import './components/buttons.scss';
-@import './components/navDots.scss'
+@import './components/navDots.scss';
+@import './components/scrollBar.scss';
