--- a/styles/utils/__variables.scss
+++ b/styles/utils/__variables.scss
@@ -26,7 +26,7 @@ $white-1: #ffffff;
 $white-2: #d3d3d3;
 
 $monster-blue: #00A7C0;
-$monster-green-medium: #C2D72D;
+$monster-green-medium: #6AD41A;
 $monster-green-dark: #31AA49;
 $monster-red: #D5262A;
 $monster-yellow: #FAEF55;
